# tjurm2025-test2

./: CMakeLists.txt  README.md
include/: impls.h  log.h  utils.h
src/area_ratio/: impl.cc
src/compute_iou/: impl.cc
src/erode/: impl.cc
src/find_contours/: impl.cc
src/rect/: impl.cc  test.cc
src/resize/: impl.cc
src/roi_color/: impl.cc
src/split/: impl.cc  test.cc
src/threshold/: impl.cc
tjurm2025-test2-master/tjurm2025-test2-master/: README.md  main.cc  run.list
tjurm2025-test2-master/tjurm2025-test2-master/assets/erode/: dilate_key.jpgZone.Identifier
tjurm2025-test2-master/tjurm2025-test2-master/include/: tests.h
tjurm2025-test2-master/tjurm2025-test2-master/src/: utils.cc
tjurm2025-test2-master/tjurm2025-test2-master/src/area_ratio/: impl.cc  test.cc
tjurm2025-test2-master/tjurm2025-test2-master/src/compute_iou/: impl.cc  test.cc
tjurm2025-test2-master/tjurm2025-test2-master/src/erode/: impl.cc  test.cc
tjurm2025-test2-master/tjurm2025-test2-master/src/find_contours/: impl.cc  test.cc
tjurm2025-test2-master/tjurm2025-test2-master/src/rect/: impl.cc
tjurm2025-test2-master/tjurm2025-test2-master/src/resize/: impl.cc  test.cc
tjurm2025-test2-master/tjurm2025-test2-master/src/roi_color/: test.cc
tjurm2025-test2-master/tjurm2025-test2-master/src/split/: impl.cc
tjurm2025-test2-master/tjurm2025-test2-master/src/threshold/: impl.cc  test.cc
